# sailing-venus

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: builds.yml
resources/models/: button.blend  button.glb  character.blend  character.glb  dashboard.blend  dashboard.glb  debug_arrow.blend  debug_arrow.glb  navigator.blend  navigator.glb  pixel.blend  pixel_gray.glb  pixel_green.glb  room.blend  room.glb  room_navigation.blend  room_navigation.glb  room_sailing.blend  room_sailing.glb  sailor.blend  sailor.glb  ship.blend  ship.glb
resources/web/: README.md  index.html
src/: emscripten_h.rs  interface.rs  main.rs  math.rs
src/renderer/: bumpalloc_buffer.rs  camera.rs  draw_calls.rs  gl.rs  mod.rs
src/renderer/font_renderer/: glyph_cache.rs  mod.rs
src/renderer/gltf/: animation.rs  gltf_fragment.glsl  gltf_vertex.glsl  loader.rs  mod.rs  program.rs
src/ship_game/: mod.rs  pathfinding.rs  room.rs
