[package]
name = "sailing-venus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
fontdue = "0.7.3"
glam = { version = "0.23.0", features = ["bytemuck"] }
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg"] }
sdl2 = "0.35.2"
tinyjson = "2.5.1"

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev.package.image]
opt-level = 2
