[package]
name = "sailing-venus"
version = "0.1.0"
edition = "2021"
description = "Ludum Dare 53 compo entry about a trading ship sailing on the clouds of Venus."

[package.metadata.bundle]
identifier = "moe.neon.sailing-venus"

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive", "extern_crate_alloc"] }
fontdue = "0.7.3"
glam = { version = "0.23.0", features = ["bytemuck"] }
sdl2 = "0.35.2"
tinyjson = "2.5.1"

[build-dependencies]
gl_generator = "0.14.0"

[features]
default = []
bundled = ["sdl2/bundled"]
static-link = ["sdl2/static-link"]
